# GameForUNIT.HACK

./: CMakeLists.txt  README.md
GAME/res/: config.json
GAME/res/Animation/: Animation.json
GAME/res/Audio/: Audio.json
GAME/res/Entityes/: Camera_1.json  Enemy_1.json
GAME/res/Map/: TextureMapConfig.json
GAME/res/Map/Shader/: MapFragmentShader.txt  MapVertexShader.txt
GAME/res/Scenes/: scene002.json
GAME/res/Text/: Text.json
GAME/res/Text/Language/: transleterENRU.json
GAME/res/Textures/Shaders/: NB_CAM_SFS.txt  NB_CAM_SVS.txt  NoBlendSpriteFragmentShader.txt  WB_UI_SVS.txt  WithBlendSpriteFragmentShader.txt  WithBlendSpriteVertexShader.txt
GAME/res/UI/: Death.json  Exit.json  MainMenu.json  NewGame.json  Pause.json  Settings.json
res/Dialogs/: End.json
res/Entityes/: Items_1.json  Projectiles_1.json  mainCharacter_1.json
res/Scenes/: scene001.json
res/Text/Shader/: TextFragmentShader.txt  TextVertexShader.txt
res/Textures/: Textures.json
res/Textures/Shaders/: NB_UI_SFS.txt  NB_UI_SVS.txt  WB_UI_SFS.txt
src/: main.cpp
src/Audio/: FileOfSound.cpp  FileOfSound.h  SampleSourse.h  SoundDevice.cpp  SoundDevice.h  SoundEffectsLibrary.cpp  SoundEffectsLibrary.h  SoundEffectsPlayer.cpp  SoundEffectsPlayer.h
src/Control/: KeyboardControl.cpp  KeyboardControl.h  MouseControl.cpp  MouseControl.h
src/GameClass/: GameObject.cpp  GameObject.h  MainGameClass.cpp  MainGameClass.h
src/GameClass/Animation/: StateAnimationController.cpp  StateAnimationController.h
src/GameClass/UIGame/: Menu.cpp  Menu.h  functions.h  staticAnimatedSprite.cpp  staticAnimatedSprite.h  staticSprite.cpp  staticSprite.h  staticTextForUI.cpp  staticTextForUI.h
src/GameEngine/: GameScene.cpp  GameScene.h  GameSceneResources.cpp  GameSceneResources.h  GameUI.cpp  GameUI.h  dialogElement.cpp  dialogElement.h
src/GameEngine/Objects/: AIController.cpp  AIController.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  IObject.h  Item.cpp  Item.h  Projectile.cpp  Projectile.h  ProjectileManager.cpp  ProjectileManager.h  interactiveObject.cpp  interactiveObject.h
src/GameEngine/PhysicsAndLogic/: CircleCollision.cpp  CircleCollision.h  Collider.cpp  Collider.h  ICollision.h  PhysicsEngine.cpp  PhysicsEngine.h  RectangleCollision.cpp  RectangleCollision.h  Script.cpp  Script.h  callbackForScripts.h
src/Managers/: ConfigManager.cpp  ConfigManager.h  JSONtoType.h  ResourceManager.cpp  ResourceManager.h  SoundManager.cpp  SoundManager.h
src/Renderer/: MapRender.cpp  MapRender.h  PrintText.cpp  PrintText.h  RenderEngine.cpp  RenderEngine.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  StateAnimation.cpp  StateAnimation.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/UI/: Button.cpp  Button.h  IElementUI.h  InputField.cpp  InputField.h  ListParameter.h  Slider.cpp  Slider.h  SwitchBool.cpp  SwitchBool.h  Translater.cpp  Translater.h  valuesControl.h
